# xImageDuplicateChecker

./: .gitignore  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  README.md  build_exe.py  console_viewer.py  create_distribution.py  desktop_viewer.py  i18n.py  image_viewer.html  integrated_desktop_app.py  main.py  requirements.txt  requirements_gui.txt  run_viewer.py  setup.py  start_viewer.py
cpp_hash_lib/: CMakeLists.txt  README.md  __init__.py  build.py  cpp_duplicate_checker.py  duplicate_analyzer.h  hash_algorithms.cpp  hash_algorithms.h  hash_wrapper.py  install_dependencies.md  install_deps.py  rotation_invariant_wrapper.py  test_simple.cpp
src/: __init__.py  duplicate_checker.py  enhanced_similarity_detector.py  hash_utils.py  i18n.py  result_logger.py  rotation_invariant_hash.py
